examples/test/testpolicy9886.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9886
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key35: value34
      key26: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value29
      podSelector:
        matchLabels:
          key14: value46
          key0: value32
